src/index.css
@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700i,900i');
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');

* {
    box-sizing: border-box;
}

/* Disable link styles */
a:hover, a:link {
    text-decoration: none;
}

html, body {
    font-family: 'Playfair Display', serif;
    color: rgba(172, 170, 190, 1);
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-color: #3b3d54;
    font-size: 14px;
    display: flex;
    flex-flow: column;
    flex-grow: 1;
    height: 100%;
    flex-shrink: 0;
    margin: 0;
}

h2, p {
    font-family: 'Cabin', sans-serif;
}

#root {
    width: 100%;
    height: 100%;
    flex: 1;
}

